# PET

./: .gitignore  404.html  CITATION.cff  DEADJOE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/: push-docs.sh
.github/workflows/: deploy-docs.yml  requirements.txt  tests.yml
bib/: refs.bib
dev_guide/: index.html
docs/: dev_guide.md  dev_guide.py  gen_ref_pages.py  references.md  tutorials.py  wavelet_example_input.txt
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
docs/templates/: _github-button.html  config.mako  custom.css  home.md  html.mako  index.html.jinja2  module.html.jinja2
docs/tutorials/: README.md
ensemble/: __init__.py  ensemble.py  logger.py
input_output/: __init__.py  get_ecl_key_val.py  organize.py  read_config.py
misc/: ecl.py  ecl_common.py  grdecl.py  read_input_csv.py
misc/grid/: __init__.py  cornerpoint.py  sector.py  unstruct.py
misc/system_tools/: environ_var.py
pipt/: __init__.py  pipt_init.py
pipt/geostat/: __init__.py  decomp.py  gaussian_sim.py  get_variogram.py  gslib.py
pipt/loop/: __init__.py  assimilation.py  ensemble.py
popt/: README.md  __init__.py  optimize.py
popt/loop/: base.py  (+9 more)
references/: index.html
search/: search_index.json
simulator/: README.md  __init__.py  calc_pem.py  eclipse.py  flow_rock.py  flow_rock_backup.py  flow_rock_mali.py  opm.py  simple_models.py
tests/: conftest.py  parser_input.pipt  test_geostat_decomp.py  test_linear.py  test_pipt_file_parser.py  test_quadratic.py  test_toggle_ml_state.py
tutorials/: index.html
(+249 files in other folders)
